--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "carros",
   "version": "0.0.0",
   "scripts": {
-  "ng": "ng",
-  "start": "ng serve",
-  "build": "ng build",
-  "test": "ng test",
-  "lint": "ng lint",
-  "e2e": "ng e2e",
-  "deploy": "ng build --base-href \"https://carlosandresfigueredo.github.io/angular2/\" && npx angular-cli-ghpages --dir=dist/carros"
-},
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "deploy": "ng build --base-href \"https://carlosandresfigueredo.github.io/angular2/\" && npx angular-cli-ghpages --dir=dist/carros"
+  },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -38,6 +38,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.3.7",
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.0",
